--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/icon-192x192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#841FFF" />
+    <title>BibleFlow</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Bijbelstudie tool"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon-192x192.png" />
     <!--
@@ -24,7 +25,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
